--- a/src/views/users/login.hbs
+++ b/src/views/users/login.hbs
@@ -2,7 +2,7 @@
     <div class="col-md-4 mx-auto">
         <div class="card">
             <div class="card-header">
-                <h3> TITULO DEVELOP </h3>
+                <h3> TITULO DEVELOP STRINGCHAR </h3>
 
             </div>
 
